--- a/quick-response-code.html
+++ b/quick-response-code.html
@@ -287,6 +287,66 @@ Zeroisp - Lonely IT Consultant            </a>
             <h2>Github Activity</h2>
                <div class="row">
 
+                       <div class="col-xs-4" ><b>nomed pushed to master at nomed/nomed.github.io</b><br /> <!-- push -->
+<svg class="octicon octicon-git-commit dashboard-event-icon" height="32" version="1.1" viewBox="0 0 14 16" width="28" xmlns="http://www.w3.org/2000/svg"><path d="M10.86 7c-0.45-1.72-2-3-3.86-3s-3.41 1.28-3.86 3H0v2h3.14c0.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3h3.14V7H10.86zM7 10.2c-1.22 0-2.2-0.98-2.2-2.2s0.98-2.2 2.2-2.2 2.2 0.98 2.2 2.2-0.98 2.2-2.2 2.2z"></path></svg>
+
+<div class="time">
+  May 15, 2016
+</div>
+
+<div class="title">
+  <a href="https://github.com/nomed">nomed</a> pushed to <a href="https://github.com/nomed/nomed.github.io/tree/master">master</a> at <a href="https://github.com/nomed/nomed.github.io">nomed/nomed.github.io</a>
+</div>
+
+<div class="details">
+  <a href="https://github.com/nomed"><img alt="@nomed" class="gravatar" height="30" src="https://avatars3.githubusercontent.com/u/241485?v=3&amp;s=60" width="30" /></a>
+
+    <div class="commits pusher-is-only-committer">
+      <ul>
+        <li>
+          <span title="nomed">
+            <img alt="@nomed" height="16" src="https://avatars2.githubusercontent.com/u/241485?v=3&amp;s=32" width="16" />
+          </span>
+          <code><a href="https://github.com/nomed/nomed.github.io/commit/6f2a12ff379b3c8d1b1eba339b3b5dda16bc37b6">6f2a12f</a></code>
+          <div class="message">
+            <blockquote>
+              theme
+            </blockquote>
+          </div>
+        </li>
+      </ul>
+    </div>
+</div></div>
+                       <div class="col-xs-4" ><b>nomed pushed to gh-pages at nomed/nomed.github.io</b><br /> <!-- push -->
+<svg class="octicon octicon-git-commit dashboard-event-icon" height="32" version="1.1" viewBox="0 0 14 16" width="28" xmlns="http://www.w3.org/2000/svg"><path d="M10.86 7c-0.45-1.72-2-3-3.86-3s-3.41 1.28-3.86 3H0v2h3.14c0.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3h3.14V7H10.86zM7 10.2c-1.22 0-2.2-0.98-2.2-2.2s0.98-2.2 2.2-2.2 2.2 0.98 2.2 2.2-0.98 2.2-2.2 2.2z"></path></svg>
+
+<div class="time">
+  May 15, 2016
+</div>
+
+<div class="title">
+  <a href="https://github.com/nomed">nomed</a> pushed to <a href="https://github.com/nomed/nomed.github.io/tree/gh-pages">gh-pages</a> at <a href="https://github.com/nomed/nomed.github.io">nomed/nomed.github.io</a>
+</div>
+
+<div class="details">
+  <a href="https://github.com/nomed"><img alt="@nomed" class="gravatar" height="30" src="https://avatars3.githubusercontent.com/u/241485?v=3&amp;s=60" width="30" /></a>
+
+    <div class="commits pusher-is-only-committer">
+      <ul>
+        <li>
+          <span title="nomed">
+            <img alt="@nomed" height="16" src="https://avatars2.githubusercontent.com/u/241485?v=3&amp;s=32" width="16" />
+          </span>
+          <code><a href="https://github.com/nomed/nomed.github.io/commit/6302cc2bb9cf5ef6d1d11a6dbc7bcc292453a1cc">6302cc2</a></code>
+          <div class="message">
+            <blockquote>
+              Generate Pelican site
+            </blockquote>
+          </div>
+        </li>
+      </ul>
+    </div>
+</div></div>
                        <div class="col-xs-4" ><b>nomed created branch gh-pages at nomed/nomed.github.io</b><br /> <!-- create -->
 <div class="simple">
   <svg class="octicon octicon-git-branch dashboard-event-icon" height="16" version="1.1" viewBox="0 0 10 16" width="10" xmlns="http://www.w3.org/2000/svg"><path d="M10 5c0-1.11-0.89-2-2-2s-2 0.89-2 2c0 0.73 0.41 1.38 1 1.72v0.3c-0.02 0.52-0.23 0.98-0.63 1.38s-0.86 0.61-1.38 0.63c-0.83 0.02-1.48 0.16-2 0.45V4.72c0.59-0.34 1-0.98 1-1.72 0-1.11-0.89-2-2-2S0 1.89 0 3c0 0.73 0.41 1.38 1 1.72v6.56C0.41 11.63 0 12.27 0 13c0 1.11 0.89 2 2 2s2-0.89 2-2c0-0.53-0.2-1-0.53-1.36 0.09-0.06 0.48-0.41 0.59-0.47 0.25-0.11 0.56-0.17 0.94-0.17 1.05-0.05 1.95-0.45 2.75-1.25s1.2-1.98 1.25-3.02h-0.02c0.61-0.36 1.02-1 1.02-1.73zM2 1.8c0.66 0 1.2 0.55 1.2 1.2s-0.55 1.2-1.2 1.2-1.2-0.55-1.2-1.2 0.55-1.2 1.2-1.2z m0 12.41c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z m6-8c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z"></path></svg>
@@ -459,52 +519,6 @@ Zeroisp - Lonely IT Consultant            </a>
         <li class="more"><a href="https://github.com/nomed/lilliput/compare/08713411c6...91791dcb01">1 more commit &raquo;</a></li>
       </ul>
     </div>
-</div></div>
-                       <div class="col-xs-4" ><b>nomed merged pull request nomed/lilliput#15</b><br /> <!-- pull_request -->
-<svg class="octicon octicon-git-pull-request dashboard-event-icon" height="32" version="1.1" viewBox="0 0 12 16" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M11 11.28c0-1.73 0-6.28 0-6.28-0.03-0.78-0.34-1.47-0.94-2.06s-1.28-0.91-2.06-0.94c0 0-1.02 0-1 0V0L4 3l3 3V4h1c0.27 0.02 0.48 0.11 0.69 0.31s0.3 0.42 0.31 0.69v6.28c-0.59 0.34-1 0.98-1 1.72 0 1.11 0.89 2 2 2s2-0.89 2-2c0-0.73-0.41-1.38-1-1.72z m-1 2.92c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2zM4 3c0-1.11-0.89-2-2-2S0 1.89 0 3c0 0.73 0.41 1.38 1 1.72 0 1.55 0 5.56 0 6.56-0.59 0.34-1 0.98-1 1.72 0 1.11 0.89 2 2 2s2-0.89 2-2c0-0.73-0.41-1.38-1-1.72V4.72c0.59-0.34 1-0.98 1-1.72z m-0.8 10c0 0.66-0.55 1.2-1.2 1.2s-1.2-0.55-1.2-1.2 0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2z m-1.2-8.8c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z"></path></svg>
-
-<div class="time">
-  May 14, 2016
-</div>
-
-<div class="title">
-  <a href="https://github.com/nomed">nomed</a> merged pull request <a href="https://github.com/nomed/lilliput/pull/15">nomed/lilliput#15</a>
-</div>
-
-<div class="details">
-  <a href="https://github.com/nomed"><img alt="@nomed" class="gravatar" height="30" src="https://avatars3.githubusercontent.com/u/241485?v=3&amp;s=60" width="30" /></a>
-  <div class="message">
-    <blockquote>Simphony</blockquote>
-      <div class="pull-info">
-        <svg class="octicon octicon-git-commit" height="16" version="1.1" viewBox="0 0 14 16" width="14" xmlns="http://www.w3.org/2000/svg"><path d="M10.86 7c-0.45-1.72-2-3-3.86-3s-3.41 1.28-3.86 3H0v2h3.14c0.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3h3.14V7H10.86zM7 10.2c-1.22 0-2.2-0.98-2.2-2.2s0.98-2.2 2.2-2.2 2.2 0.98 2.2 2.2-0.98 2.2-2.2 2.2z"></path></svg>
-        <em>2</em> commits with
-        <em>1,897</em> additions and
-        <em>1,189</em> deletions
-      </div>
-  </div>
-</div></div>
-                       <div class="col-xs-4" ><b>nomed opened pull request nomed/lilliput#15</b><br /> <!-- pull_request -->
-<svg class="octicon octicon-git-pull-request dashboard-event-icon" height="32" version="1.1" viewBox="0 0 12 16" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M11 11.28c0-1.73 0-6.28 0-6.28-0.03-0.78-0.34-1.47-0.94-2.06s-1.28-0.91-2.06-0.94c0 0-1.02 0-1 0V0L4 3l3 3V4h1c0.27 0.02 0.48 0.11 0.69 0.31s0.3 0.42 0.31 0.69v6.28c-0.59 0.34-1 0.98-1 1.72 0 1.11 0.89 2 2 2s2-0.89 2-2c0-0.73-0.41-1.38-1-1.72z m-1 2.92c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2zM4 3c0-1.11-0.89-2-2-2S0 1.89 0 3c0 0.73 0.41 1.38 1 1.72 0 1.55 0 5.56 0 6.56-0.59 0.34-1 0.98-1 1.72 0 1.11 0.89 2 2 2s2-0.89 2-2c0-0.73-0.41-1.38-1-1.72V4.72c0.59-0.34 1-0.98 1-1.72z m-0.8 10c0 0.66-0.55 1.2-1.2 1.2s-1.2-0.55-1.2-1.2 0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2z m-1.2-8.8c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z"></path></svg>
-
-<div class="time">
-  May 14, 2016
-</div>
-
-<div class="title">
-  <a href="https://github.com/nomed">nomed</a> opened pull request <a href="https://github.com/nomed/lilliput/pull/15">nomed/lilliput#15</a>
-</div>
-
-<div class="details">
-  <a href="https://github.com/nomed"><img alt="@nomed" class="gravatar" height="30" src="https://avatars3.githubusercontent.com/u/241485?v=3&amp;s=60" width="30" /></a>
-  <div class="message">
-    <blockquote>Simphony</blockquote>
-      <div class="pull-info">
-        <svg class="octicon octicon-git-commit" height="16" version="1.1" viewBox="0 0 14 16" width="14" xmlns="http://www.w3.org/2000/svg"><path d="M10.86 7c-0.45-1.72-2-3-3.86-3s-3.41 1.28-3.86 3H0v2h3.14c0.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3h3.14V7H10.86zM7 10.2c-1.22 0-2.2-0.98-2.2-2.2s0.98-2.2 2.2-2.2 2.2 0.98 2.2 2.2-0.98 2.2-2.2 2.2z"></path></svg>
-        <em>2</em> commits with
-        <em>1,897</em> additions and
-        <em>1,189</em> deletions
-      </div>
-  </div>
 </div></div>
                </div><!-- /.github_activity -->
          </div>
